--- a/projects/funbox/css/style.css
+++ b/projects/funbox/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 .card-wrapper:hover {
-    transform: scale(1.04);
+    transform: translateY(-5px);
 }
 
 .card.selected {
@@ -220,7 +220,7 @@ p {
 
 .task-link {
     display: block;
-    margin-top: 20px;
+    margin: 20px auto;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     text-shadow: 0px 1px 0 #000000;
